# pmsim

./: .gitignore  README.md  pyproject.toml
examples/: config_example.json  config_wires.json  make_axon_field.py  make_sphere_phantom.py  make_wire_bundle.py  run_example.py
src/pmsim/: __init__.py  backend.py  cli.py  config.py  constants.py  detector.py  projector.py  propagation.py  sample.py  simulator.py  source.py
src/pmsim/schema/: config.schema.json
tests/: test_partial_coherence.py  test_propagation.py  test_sample.py  test_simulator.py
