[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pmsim"
version = "0.1.0"
description = "Propagation-based phase-contrast X-ray projection microscope simulator."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "A. Mittone" }]
dependencies = [
    "numpy>=1.23",
    "scipy>=1.10",
    "tifffile>=2023.7.10",
    "jsonschema>=4.17",
]

[project.optional-dependencies]
hdf5 = ["h5py>=3.8"]
# `pmsim[cuda12]` / `pmsim[cuda11]` install CuPy for the GPU backend.
cuda12 = ["cupy-cuda12x>=13"]
cuda11 = ["cupy-cuda11x>=13"]
dev = [
    "pytest>=7",
    "pytest-cov",
    "ruff",
    "h5py>=3.8",
]

[project.scripts]
pmsim = "pmsim.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/pmsim"]
# hatchling includes all non-hidden files under packages by default,
# so the schema JSON travels with the wheel automatically.

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py39"
